--- a/src/components/Landing.astro
+++ b/src/components/Landing.astro
@@ -13,13 +13,23 @@
             </h2>
         </div>
     </div>
+    <div class="services" >
+        <h3>SERVICIO TECNICO</h3>
+        <h3>- ACCESORIOS -</h3>
+        <h3>CELULARES</h3>
+    </div>
+    <div class="icons" >
+        <svg viewBox="0 0 16 16" class="instagram"><linearGradient id="a" x1="1.464" x2="14.536" y1="14.536" y2="1.464" gradientUnits="userSpaceOnUse"><stop offset="0" stop-color="#FFC107"></stop><stop offset=".507" stop-color="#F44336"></stop><stop offset=".99" stop-color="#9C27B0"></stop></linearGradient><path fill="url(#a)" d="M11 0H5a5 5 0 0 0-5 5v6a5 5 0 0 0 5 5h6a5 5 0 0 0 5-5V5a5 5 0 0 0-5-5zm3.5 11c0 1.93-1.57 3.5-3.5 3.5H5c-1.93 0-3.5-1.57-3.5-3.5V5c0-1.93 1.57-3.5 3.5-3.5h6c1.93 0 3.5 1.57 3.5 3.5v6z"></path><linearGradient id="b" x1="5.172" x2="10.828" y1="10.828" y2="5.172" gradientUnits="userSpaceOnUse"><stop offset="0" stop-color="#FFC107"></stop><stop offset=".507" stop-color="#F44336"></stop><stop offset=".99" stop-color="#9C27B0"></stop></linearGradient><path fill="url(#b)" d="M8 4a4 4 0 1 0 0 8 4 4 0 0 0 0-8zm0 6.5A2.503 2.503 0 0 1 5.5 8c0-1.379 1.122-2.5 2.5-2.5s2.5 1.121 2.5 2.5c0 1.378-1.122 2.5-2.5 2.5z"></path><linearGradient id="c" x1="11.923" x2="12.677" y1="4.077" y2="3.323" gradientUnits="userSpaceOnUse"><stop offset="0" stop-color="#FFC107"></stop><stop offset=".507" stop-color="#F44336"></stop><stop offset=".99" stop-color="#9C27B0"></stop></linearGradient><circle cx="12.3" cy="3.7" r=".533" fill="url(#c)"></circle></svg>
+        <svg viewBox="0 0 266.893 266.895" class="facebook"><path fill="#485a96" d="M252.164 266.895c8.134 0 14.729-6.596 14.729-14.73V14.73c0-8.137-6.596-14.73-14.729-14.73H14.73C6.593 0 0 6.594 0 14.73v237.434c0 8.135 6.593 14.73 14.73 14.73h237.434z"></path><path fill="#fff" d="M184.152 266.895V163.539h34.692l5.194-40.28h-39.887V97.542c0-11.662 3.238-19.609 19.962-19.609l21.329-.01V41.897c-3.689-.49-16.351-1.587-31.08-1.587-30.753 0-51.807 18.771-51.807 53.244v29.705h-34.781v40.28h34.781v103.355h41.597z"></path></svg>
+        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 8 8" id="Map"><path d="M4 0C2.34 0 1 1.34 1 3c0 2 3 5 3 5s3-3 3-5c0-1.66-1.34-3-3-3zm0 1a2 2 0 0 1 2 2c0 1.11-.89 2-2 2a2 2 0 1 1 0-4z" fill="#f13939" class="color000000 svgShape"></path></svg>
+    </div>
+    
 </section>
 
 <style>
     section{
         display: grid;
         width: 100%;
-        height: 100%;
         justify-content: center;
         align-items: center;
     }
@@ -32,20 +42,24 @@
             margin-right: -5px;
         }
     }
-    h1{
-        font-size: 6rem;
-        font-family: "nau", sans-serif;
-        font-weight: 200;
-        margin-top: 0;
-        margin-left: 10px;
-        margin-bottom: -40px;
+    .services{
+        display: flex;
+        justify-content: center;
+        width: 100%;
+        h3{
+            margin: 0;
+            margin-inline: 8px;
+        }
     }
-    h2{
-        font-size: 14rem;
-        color: #ffff30;
-        font-family: "big_noodle", sans-serif;
-        font-weight: 200;
-        letter-spacing: 3px;
-        margin:0;
+    .icons{
+        display: flex;
+        justify-content: center;
+        margin-top: 10px;
+        svg{
+            margin-inline: 10px;
+            width: 40px;
+            height: 40px;
+        }
     }
+    
 </style>
