--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -14,6 +14,9 @@ const { title } = Astro.props;
 		<meta name="viewport" content="width=device-width" />
 		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
 		<meta name="generator" content={Astro.generator} />
+		<link rel="preconnect" href="https://fonts.googleapis.com">
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+		<link href="https://fonts.googleapis.com/css2?family=Big+Shoulders+Text:wght@100..900&display=swap" rel="stylesheet">
 		<title>{title}</title>
 	</head>
 	<body>
@@ -48,7 +51,29 @@ const { title } = Astro.props;
 		font-display: swap;
 	}
 	html {
+		font-family: "Big Shoulders Text", sans-serif;
 		background: #13151a;
 		background-size: 224px;
+	}
+	h1{
+        font-size: 6rem;
+        font-family: "nau", sans-serif;
+        font-weight: 200;
+        margin-top: 0;
+        margin-left: 10px;
+        margin-bottom: -40px;
+    }
+    h2{
+        font-size: 14rem;
+        color: #ffff30;
+        font-family: "big_noodle", sans-serif;
+        font-weight: 200;
+        letter-spacing: 3px;
+        margin:0;
+    }
+	h3{
+		font-weight: 400;
+		letter-spacing: 4px;
+		font-size: 2rem;
 	}
 </style>
