--- a/src/components/Landing.astro
+++ b/src/components/Landing.astro
@@ -1,4 +1,12 @@
 ---
+import Carrusel from "./react/Carrusel"
+
+const images = [
+    'https://tiendadiggit.com.ar/web/image/product.image/1350/image_1024/Celular%20Samsung%20Galaxy%20A14%20LTE%20128gb?unique=4dc49f6',
+    'https://dcdn.mitiendanube.com/stores/001/235/768/products/a24-frente1-c836181795b66df5f616843353932240-640-0.png',
+    'https://multipoint.com.ar/Image/0/750_750-SM-A235_Galaxy_A23_LTE_White_Front.png',
+    // Agrega más URLs de imágenes aquí
+  ];
 ---
 
 <section>
@@ -23,6 +31,12 @@
         <svg viewBox="0 0 266.893 266.895" class="facebook"><path fill="#485a96" d="M252.164 266.895c8.134 0 14.729-6.596 14.729-14.73V14.73c0-8.137-6.596-14.73-14.729-14.73H14.73C6.593 0 0 6.594 0 14.73v237.434c0 8.135 6.593 14.73 14.73 14.73h237.434z"></path><path fill="#fff" d="M184.152 266.895V163.539h34.692l5.194-40.28h-39.887V97.542c0-11.662 3.238-19.609 19.962-19.609l21.329-.01V41.897c-3.689-.49-16.351-1.587-31.08-1.587-30.753 0-51.807 18.771-51.807 53.244v29.705h-34.781v40.28h34.781v103.355h41.597z"></path></svg>
         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 8 8" id="Map"><path d="M4 0C2.34 0 1 1.34 1 3c0 2 3 5 3 5s3-3 3-5c0-1.66-1.34-3-3-3zm0 1a2 2 0 0 1 2 2c0 1.11-.89 2-2 2a2 2 0 1 1 0-4z" fill="#f13939" class="color000000 svgShape"></path></svg>
     </div>
+    <Carrusel images={images} client:load/>
+</section>
+<section class="info" >
+    <h3>QUILTECNO CELULARES</h3>
+    <p>Andrés Baranda 1200, Esq. Carlos Pellegrini, B1878 Quilmes, Provincia de Buenos Aires</p>
+    <p>Teléfono: 011 6600-5300</p>
     
 </section>
 
@@ -59,6 +73,15 @@
             margin-inline: 10px;
             width: 40px;
             height: 40px;
+        }
+    }
+    .info{
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        h3{
+            font-size: 3rem;
+            margin: 0;
         }
     }
     
