--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,7 +3,7 @@ import Layout from '../layouts/Layout.astro';
 import Landing from '../components/Landing.astro';
 ---
 
-<Layout title="Welcome to Astro.">
+<Layout title="Quiltecno 📱">
 	<main>
 		<Landing/>
 	</main>
