carousel brands complete

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,7 +3,7 @@ import Layout from '../layouts/Layout.astro';
 import Landing from '../components/Landing.astro';
 ---
 
-<Layout title="Quiltecno 📱">
+<Layout title="Quiltecno Celulares 📱 - Celulares, Accesorios y Servicio Técnico en Quilmes">
 	<main>
 		<Landing/>
 	</main>
