--- a/src/components/Landing.astro
+++ b/src/components/Landing.astro
@@ -1,17 +1,20 @@
 ---
-import Carrusel from "./react/Carrusel"
+import CarouselBrands from "./CarouselBrans/CarouselBrands"
 
 const images = [
-    'https://tiendadiggit.com.ar/web/image/product.image/1350/image_1024/Celular%20Samsung%20Galaxy%20A14%20LTE%20128gb?unique=4dc49f6',
-    'https://dcdn.mitiendanube.com/stores/001/235/768/products/a24-frente1-c836181795b66df5f616843353932240-640-0.png',
-    'https://multipoint.com.ar/Image/0/750_750-SM-A235_Galaxy_A23_LTE_White_Front.png',
-    // Agrega más URLs de imágenes aquí
-  ];
+    '../../brands/Quiltecno-LG.png',
+    '../../brands/Quiltecno-Apple.png',
+    '../../brands/Quiltecno-Motorola.png',
+    '../../brands/Quiltecno-Nokia.png',
+    '../../brands/Quiltecno-Sony.png',
+    '../../brands/Quiltecno-Xiaomi.png',
+    '../../brands/Quiltecno-Samsung.png',
+  ]
 ---
 
-<section>
+<section class="landing" >
     <div class="container" >
-        <img src="./../../public/logo.webp" >
+        <img src="./../../logo.webp" >
         <div>
             <h1>
                 <span style="color: #ffff30" >QUIL</span>TECNO
@@ -29,23 +32,26 @@ const images = [
     <div class="icons" >
         <svg viewBox="0 0 16 16" class="instagram"><linearGradient id="a" x1="1.464" x2="14.536" y1="14.536" y2="1.464" gradientUnits="userSpaceOnUse"><stop offset="0" stop-color="#FFC107"></stop><stop offset=".507" stop-color="#F44336"></stop><stop offset=".99" stop-color="#9C27B0"></stop></linearGradient><path fill="url(#a)" d="M11 0H5a5 5 0 0 0-5 5v6a5 5 0 0 0 5 5h6a5 5 0 0 0 5-5V5a5 5 0 0 0-5-5zm3.5 11c0 1.93-1.57 3.5-3.5 3.5H5c-1.93 0-3.5-1.57-3.5-3.5V5c0-1.93 1.57-3.5 3.5-3.5h6c1.93 0 3.5 1.57 3.5 3.5v6z"></path><linearGradient id="b" x1="5.172" x2="10.828" y1="10.828" y2="5.172" gradientUnits="userSpaceOnUse"><stop offset="0" stop-color="#FFC107"></stop><stop offset=".507" stop-color="#F44336"></stop><stop offset=".99" stop-color="#9C27B0"></stop></linearGradient><path fill="url(#b)" d="M8 4a4 4 0 1 0 0 8 4 4 0 0 0 0-8zm0 6.5A2.503 2.503 0 0 1 5.5 8c0-1.379 1.122-2.5 2.5-2.5s2.5 1.121 2.5 2.5c0 1.378-1.122 2.5-2.5 2.5z"></path><linearGradient id="c" x1="11.923" x2="12.677" y1="4.077" y2="3.323" gradientUnits="userSpaceOnUse"><stop offset="0" stop-color="#FFC107"></stop><stop offset=".507" stop-color="#F44336"></stop><stop offset=".99" stop-color="#9C27B0"></stop></linearGradient><circle cx="12.3" cy="3.7" r=".533" fill="url(#c)"></circle></svg>
         <svg viewBox="0 0 266.893 266.895" class="facebook"><path fill="#485a96" d="M252.164 266.895c8.134 0 14.729-6.596 14.729-14.73V14.73c0-8.137-6.596-14.73-14.729-14.73H14.73C6.593 0 0 6.594 0 14.73v237.434c0 8.135 6.593 14.73 14.73 14.73h237.434z"></path><path fill="#fff" d="M184.152 266.895V163.539h34.692l5.194-40.28h-39.887V97.542c0-11.662 3.238-19.609 19.962-19.609l21.329-.01V41.897c-3.689-.49-16.351-1.587-31.08-1.587-30.753 0-51.807 18.771-51.807 53.244v29.705h-34.781v40.28h34.781v103.355h41.597z"></path></svg>
-        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 8 8" id="Map"><path d="M4 0C2.34 0 1 1.34 1 3c0 2 3 5 3 5s3-3 3-5c0-1.66-1.34-3-3-3zm0 1a2 2 0 0 1 2 2c0 1.11-.89 2-2 2a2 2 0 1 1 0-4z" fill="#f13939" class="color000000 svgShape"></path></svg>
+        <svg viewBox="0 0 8 8" id="Map"><path d="M4 0C2.34 0 1 1.34 1 3c0 2 3 5 3 5s3-3 3-5c0-1.66-1.34-3-3-3zm0 1a2 2 0 0 1 2 2c0 1.11-.89 2-2 2a2 2 0 1 1 0-4z" fill="#f13939" class="color000000 svgShape"></path></svg>
     </div>
-    <Carrusel images={images} client:load/>
 </section>
+<div class="marcas" >
+    <CarouselBrands visibleImages={4} images={images} client:load/>
+</div>
 <section class="info" >
     <h3>QUILTECNO CELULARES</h3>
     <p>Andrés Baranda 1200, Esq. Carlos Pellegrini, B1878 Quilmes, Provincia de Buenos Aires</p>
     <p>Teléfono: 011 6600-5300</p>
-    
 </section>
+<footer>Copyright © 2024 Quiltecno Celulares | Powered by<a href="https://www.google.com/search?q=Jonatan+Avila+Desarrollador+Web+Full+Stack+-+Dise%C3%B1ador+Web&stick=H4sIAAAAAAAA_-NgU1I1qLA0TTQ2SktOSjFPNktLNDG3MqhISTE1NzA3tDA1MzdMszRIXcRq7ZWfl1iSmKfgWJaZk6jgklqcWFSUn5OTmJJfpBCemqTgVpqToxBckpicraCr4JJZnHp4I0wOALOQqlZnAAAA&hl=es-419&mat=CVgOLeHDGpajElcBezTaAYfiq0Tvx7RQO9s4tx8pO-EgXASdjTSOlDyLKpqD_ojTLmkX3kOIjq1BDAsPAr5lYSrGttAAwIqb4AVl8TzL_yz59A0ehEO7jJOmS9QXi09kFco&authuser=0" >Jonatan Avila Desarrollo Web</a></footer>
 
 <style>
-    section{
+    .landing{
         display: grid;
-        width: 100%;
+        width: 99vw;
+        height: 100vh;
         justify-content: center;
-        align-items: center;
+        align-content: center;
     }
     .container{
         display: flex;
@@ -56,12 +62,16 @@ const images = [
             margin-right: -5px;
         }
     }
+    .marcas{
+        width: 100%;
+    }
     .services{
         display: flex;
         justify-content: center;
         width: 100%;
         h3{
             margin: 0;
+            color: #ffff;
             margin-inline: 8px;
         }
     }
@@ -78,11 +88,10 @@ const images = [
     .info{
         display: flex;
         flex-direction: column;
-        justify-content: center;
+        align-items: center;
         h3{
             font-size: 3rem;
             margin: 0;
         }
     }
-    
 </style>
