--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -12,7 +12,7 @@ const { title } = Astro.props;
 		<meta charset="UTF-8" />
 		<meta name="description" content="Astro description" />
 		<meta name="viewport" content="width=device-width" />
-		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+		<link rel="icon" type="image/svg+xml" href="/icon.webp" />
 		<meta name="generator" content={Astro.generator} />
 		<link rel="preconnect" href="https://fonts.googleapis.com">
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -55,6 +55,13 @@ const { title } = Astro.props;
 		background: #13151a;
 		background-size: 224px;
 	}
+	html::-webkit-scrollbar{
+		width: 5px;
+	}
+	html::-webkit-scrollbar-thumb {
+ 		background: #ffff307a;
+  		border-radius: 6px;
+	}
 	h1{
         font-size: 6rem;
         font-family: "nau", sans-serif;
@@ -73,7 +80,24 @@ const { title } = Astro.props;
     }
 	h3{
 		font-weight: 400;
+		color: #ffff30;
 		letter-spacing: 4px;
 		font-size: 2rem;
 	}
+	a{
+		text-decoration: none;
+		margin-left: 3px;
+		color: #ffff;
+	}
+	a:hover{
+		color: #ffff30;
+	}
+	footer{
+		display: flex;
+		justify-content: center;
+		align-items: center;
+        font-size: .7rem;
+		letter-spacing: 3px;
+		padding: 5px;
+    }
 </style>
