--- a/src/components/Landing.astro
+++ b/src/components/Landing.astro
@@ -1,7 +1,8 @@
 ---
 import CarouselBrands from "./CarouselBrans/CarouselBrands"
+import CarouselServices from "./CarouselServices/CarouselServices"
 
-const images = [
+const imagesBrands = [
     '../../brands/Quiltecno-LG.png',
     '../../brands/Quiltecno-Apple.png',
     '../../brands/Quiltecno-Motorola.png',
@@ -10,9 +11,16 @@ const images = [
     '../../brands/Quiltecno-Xiaomi.png',
     '../../brands/Quiltecno-Samsung.png',
   ]
+
+const imagesServices = [
+    '../../services/Quiltecno-Celulares-Accesorios-en-la-Ciudad-de-Quilmes.webp',
+    '../../services/Quiltecno-Celulares-en-la-Ciudad-de-Quilmes-Provincia-de-Buenos-Aires-Accesorios-para-Celulares.webp',
+    '../../services/Quiltecno-Celulares-en-la-Ciudad-de-Quilmes-Provincia-de-Buenos-Aires-Perifericos.webp',
+    '../../services/Quiltecno-Celulares-en-la-Ciudad-de-Quilmes-Provincia-de-Buenos-Aires-Servicio-Tecnico-Multimarca.webp',
+]
 ---
 
-<section class="landing" >
+<header class="landing" >
     <div class="container" >
         <img src="./../../logo.webp" >
         <div>
@@ -34,10 +42,13 @@ const images = [
         <svg viewBox="0 0 266.893 266.895" class="facebook"><path fill="#485a96" d="M252.164 266.895c8.134 0 14.729-6.596 14.729-14.73V14.73c0-8.137-6.596-14.73-14.729-14.73H14.73C6.593 0 0 6.594 0 14.73v237.434c0 8.135 6.593 14.73 14.73 14.73h237.434z"></path><path fill="#fff" d="M184.152 266.895V163.539h34.692l5.194-40.28h-39.887V97.542c0-11.662 3.238-19.609 19.962-19.609l21.329-.01V41.897c-3.689-.49-16.351-1.587-31.08-1.587-30.753 0-51.807 18.771-51.807 53.244v29.705h-34.781v40.28h34.781v103.355h41.597z"></path></svg>
         <svg viewBox="0 0 8 8" id="Map"><path d="M4 0C2.34 0 1 1.34 1 3c0 2 3 5 3 5s3-3 3-5c0-1.66-1.34-3-3-3zm0 1a2 2 0 0 1 2 2c0 1.11-.89 2-2 2a2 2 0 1 1 0-4z" fill="#f13939" class="color000000 svgShape"></path></svg>
     </div>
+</header>
+<section class="marcas" >
+    <CarouselBrands visibleImages={4} images={imagesBrands} interval={2000} client:load/>
 </section>
-<div class="marcas" >
-    <CarouselBrands visibleImages={4} images={images} client:load/>
-</div>
+<section>
+    <CarouselServices images={imagesServices} interval={2000} client:load />
+</section>
 <section class="info" >
     <h3>QUILTECNO CELULARES</h3>
     <p>Andrés Baranda 1200, Esq. Carlos Pellegrini, B1878 Quilmes, Provincia de Buenos Aires</p>
@@ -46,7 +57,7 @@ const images = [
 <footer>Copyright © 2024 Quiltecno Celulares | Powered by<a href="https://www.google.com/search?q=Jonatan+Avila+Desarrollador+Web+Full+Stack+-+Dise%C3%B1ador+Web&stick=H4sIAAAAAAAA_-NgU1I1qLA0TTQ2SktOSjFPNktLNDG3MqhISTE1NzA3tDA1MzdMszRIXcRq7ZWfl1iSmKfgWJaZk6jgklqcWFSUn5OTmJJfpBCemqTgVpqToxBckpicraCr4JJZnHp4I0wOALOQqlZnAAAA&hl=es-419&mat=CVgOLeHDGpajElcBezTaAYfiq0Tvx7RQO9s4tx8pO-EgXASdjTSOlDyLKpqD_ojTLmkX3kOIjq1BDAsPAr5lYSrGttAAwIqb4AVl8TzL_yz59A0ehEO7jJOmS9QXi09kFco&authuser=0" >Jonatan Avila Desarrollo Web</a></footer>
 
 <style>
-    .landing{
+    header{
         display: grid;
         width: 99vw;
         height: 100vh;
