--- a/src/components/Landing.astro
+++ b/src/components/Landing.astro
@@ -1,23 +1,6 @@
 ---
 import CarouselBrands from "./CarouselBrans/CarouselBrands"
 import CarouselServices from "./CarouselServices/CarouselServices"
-
-const imagesBrands = [
-    '../../brands/Quiltecno-LG.png',
-    '../../brands/Quiltecno-Apple.png',
-    '../../brands/Quiltecno-Motorola.png',
-    '../../brands/Quiltecno-Nokia.png',
-    '../../brands/Quiltecno-Sony.png',
-    '../../brands/Quiltecno-Xiaomi.png',
-    '../../brands/Quiltecno-Samsung.png',
-  ]
-
-const imagesServices = [
-    '../../services/Quiltecno-Celulares-Accesorios-en-la-Ciudad-de-Quilmes.webp',
-    '../../services/Quiltecno-Celulares-en-la-Ciudad-de-Quilmes-Provincia-de-Buenos-Aires-Accesorios-para-Celulares.webp',
-    '../../services/Quiltecno-Celulares-en-la-Ciudad-de-Quilmes-Provincia-de-Buenos-Aires-Perifericos.webp',
-    '../../services/Quiltecno-Celulares-en-la-Ciudad-de-Quilmes-Provincia-de-Buenos-Aires-Servicio-Tecnico-Multimarca.webp',
-]
 ---
 
 <header class="landing" >
@@ -43,11 +26,11 @@ const imagesServices = [
         <svg viewBox="0 0 8 8" id="Map"><path d="M4 0C2.34 0 1 1.34 1 3c0 2 3 5 3 5s3-3 3-5c0-1.66-1.34-3-3-3zm0 1a2 2 0 0 1 2 2c0 1.11-.89 2-2 2a2 2 0 1 1 0-4z" fill="#f13939" class="color000000 svgShape"></path></svg>
     </div>
 </header>
-<section class="marcas" >
-    <CarouselBrands visibleImages={4} images={imagesBrands} interval={2000} client:load/>
+<section>
+    <CarouselBrands client:load/>
 </section>
 <section>
-    <CarouselServices images={imagesServices} interval={2000} client:load />
+    <CarouselServices client:load />
 </section>
 <section class="info" >
     <h3>QUILTECNO CELULARES</h3>
@@ -72,9 +55,6 @@ const imagesServices = [
             margin-top: -15px;
             margin-right: -5px;
         }
-    }
-    .marcas{
-        width: 100%;
     }
     .services{
         display: flex;
