--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -18,6 +18,21 @@ const { title } = Astro.props;
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 		<link href="https://fonts.googleapis.com/css2?family=Big+Shoulders+Text:wght@100..900&display=swap" rel="stylesheet">
 		<title>{title}</title>
+		<meta name="description" content="Tenemos amplio stock de Accesorios para Celulares,Perifericos,Servicio Tenico en Andrés Baranda 1200, B1878 Quilmes,Provincia de Buenos Aires">
+		<link rel="canonical" href="https://quiltecno.com.ar/">
+		<meta property="og:locale" content="es_ES">
+		<meta property="og:type" content="website">
+		<meta property="og:title" content="Quiltecno Celulares - Celulares, Accesorios y Servicio Técnico en Quilmes">
+		<meta property="og:description" content="Tenemos amplio stock de Accesorios para Celulares,Perifericos,Servicio Tenico en Andrés Baranda 1200, B1878 Quilmes,Provincia de Buenos Aires">
+		<meta property="og:url" content="https://quiltecno.com.ar/">
+		<meta property="og:site_name" content="Quiltecno Celulares">
+		<!-- <meta property="og:image" content="https://quiltecno.com.ar/wp-content/uploads/2022/06/Quiltecno-Celulares-Accesorios-Perifericos-y-Servicio-Tecnico-en-la-Ciudad-de-Quilmes-Provincia-de-Buenos-Aires-2.png"> -->
+		<meta property="og:image:width" content="600">
+		<meta property="og:image:height" content="600">
+		<meta property="og:image:type" content="image/png">
+		<meta name="twitter:card" content="summary_large_image">
+		<meta name="twitter:label1" content="Tiempo de lectura">
+		<meta name="twitter:data1" content="1 minuto">
 	</head>
 	<body>
 		<slot />
@@ -40,15 +55,13 @@ const { title } = Astro.props;
 	}
 	@font-face {
 		font-family: 'big_noodle';
-		src: url('./../assets/fonts/big_noodle_titling.ttf') format('truetype');
+		src: url('./../assets/fonts/big_noodle_titling.woff') format('woff2');
 		font-style: normal;
-		font-display: swap;
 	}
 	@font-face {
 		font-family: 'nau';
-		src: url('./../assets/fonts/Nau_Sea.otf') format('truetype');
+		src: url('./../assets/fonts/Nau_Sea.woff') format('woff2');
 		font-style: normal;
-		font-display: swap;
 	}
 	html {
 		font-family: "Big Shoulders Text", sans-serif;
