--- a/src/components/CarouselBrans/CarouselBrands.css
+++ b/src/components/CarouselBrans/CarouselBrands.css
@@ -1,6 +1,7 @@
 .carousel {
     display: flex;
     width: 100%;
+    height: 40px;
     justify-content: center;
     align-items: center;
     background-color: #ffff30;
