--- a/src/components/Landing.astro
+++ b/src/components/Landing.astro
@@ -5,7 +5,7 @@ import CarouselServices from "./CarouselServices/CarouselServices"
 
 <header class="landing" >
     <div class="container" >
-        <img src="./../../logo.webp" >
+        <img src="./../../logo.webp" alt="Quiltecno celulares" >
         <div>
             <h1>
                 <span style="color: #ffff30" >QUIL</span>TECNO
