--- a/src/components/CarouselServices/CarouselServices.css
+++ b/src/components/CarouselServices/CarouselServices.css
@@ -25,10 +25,23 @@
     display: block;
 }
 
+.slide_services::after{
+    position: absolute;
+    z-index: 1;
+    content: " ";
+    width: 100%;
+    height: 100%;
+    left: 0;
+    bottom: 0;
+    background-color: rgb(0, 0, 0);
+    opacity: .6;
+}
+
 .text_services{
     display: flex;
     justify-content: center;
     position: absolute;
+    z-index: 4;
     width: 100%;
     margin: 0;
     z-index: 2;
@@ -37,4 +50,11 @@
     transform: translate(-50%, -50%);
     font-size: 4.5rem;
     font-weight: 700;
+}
+
+@media 
+    (width <= 450px) {
+        .text_services{
+            font-size: 1.4rem;
+        }
 }
