--- a/src/components/Landing.astro
+++ b/src/components/Landing.astro
@@ -3,7 +3,7 @@ import CarouselBrands from "./CarouselBrans/CarouselBrands"
 import CarouselServices from "./CarouselServices/CarouselServices"
 ---
 
-<header class="landing" >
+<header>
     <div class="container" >
         <img src="./../../logo.webp" alt="Quiltecno celulares" >
         <div>
@@ -42,10 +42,10 @@ import CarouselServices from "./CarouselServices/CarouselServices"
     </div>
 </header>
 <section>
-    <CarouselBrands client:load/>
+    <CarouselBrands client:only/>
 </section>
 <section>
-    <CarouselServices client:load />
+    <CarouselServices client:only/>
 </section>
 <section class="info" >
     <h3>QUILTECNO CELULARES</h3>
@@ -70,12 +70,12 @@ import CarouselServices from "./CarouselServices/CarouselServices"
     }
     .container{
         display: flex;
-        img{
-            width: 100px;
-            height: 130px;
-            margin-top: -15px;
-            margin-right: -5px;
-        }
+    }
+    img{
+        width: 100px;
+        height: 130px;
+        margin-top: -15px;
+        margin-right: -5px;
     }
     .services{
         display: flex;
@@ -104,6 +104,40 @@ import CarouselServices from "./CarouselServices/CarouselServices"
         h3{
             font-size: 3rem;
             margin: 0;
+        }
+    }
+    @media 
+        (width <= 400px){
+        header{
+            width: 100%;
+        }
+        img{
+            width: 50px;
+            height: 65px;
+        }
+        h1{
+            font-size: 2.5rem;
+            margin-bottom: -15px;
+        }
+        h2{
+            font-size: 5.5rem;
+        }
+        .services{
+            h3{
+                font-size: .7rem;
+            }
+        }
+        .info{
+            h3{
+                font-size: 2rem;
+            }
+            p{
+                font-size: .8rem;
+            }
+        }
+        footer{
+            justify-content: center;
+            font-size: .5rem;
         }
     }
 </style>
