fixed social icons

--- a/src/components/Landing.astro
+++ b/src/components/Landing.astro
@@ -135,6 +135,12 @@ import CarouselServices from "./CarouselServices/CarouselServices"
         h2{
             font-size: 5.5rem;
         }
+        .icons{
+            svg{
+                width: 30px;
+                height: 30px;
+            }
+        }
         .services{
             h3{
                 font-size: .7rem;
