fixed heigth header

--- a/src/components/Landing.astro
+++ b/src/components/Landing.astro
@@ -123,6 +123,7 @@ import CarouselServices from "./CarouselServices/CarouselServices"
         (width <= 720px){
         header{
             width: 100%;
+            height: 70vh;
         }
         img{
             width: 50px;
