--- a/src/components/Landing.astro
+++ b/src/components/Landing.astro
@@ -54,6 +54,16 @@ import CarouselServices from "./CarouselServices/CarouselServices"
 <section>
     <CarouselServices client:only/>
 </section>
+<section class="map" >
+    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3279.1389986900676!2d-58.27051392487784!3d-34.726890564012635!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95a32ff3630e0bf7%3A0xf8e220d2110a602a!2sQuiltecno%20Celulares!5e0!3m2!1ses-419!2sar!4v1718981713422!5m2!1ses-419!2sar"
+            width="100%" 
+            height="450" 
+            style="border:0;" 
+            allowfullscreen="" 
+            loading="lazy" 
+            referrerpolicy="no-referrer-when-downgrade">
+    </iframe>
+</section>
 <section class="info" >
     <h3>QUILTECNO CELULARES</h3>
     <p>Andrés Baranda 1200, Esq. Carlos Pellegrini, B1878 Quilmes, Provincia de Buenos Aires</p>
@@ -103,6 +113,10 @@ import CarouselServices from "./CarouselServices/CarouselServices"
             width: 40px;
             height: 40px;
         }
+    }
+    .map{
+        width: 100%;
+        margin-bottom: 15px;
     }
     .info{
         display: flex;
