--- a/src/components/Landing.astro
+++ b/src/components/Landing.astro
@@ -69,13 +69,18 @@ import CarouselServices from "./CarouselServices/CarouselServices"
     <p>Andrés Baranda 1200, Esq. Carlos Pellegrini, B1878 Quilmes, Provincia de Buenos Aires</p>
     <p>Teléfono: 011 6600-5300</p>
 </section>
-<footer>Copyright © 2024 Quiltecno Celulares | Powered by<a href="https://www.google.com/search?q=Jonatan+Avila+Desarrollador+Web+Full+Stack+-+Dise%C3%B1ador+Web&stick=H4sIAAAAAAAA_-NgU1I1qLA0TTQ2SktOSjFPNktLNDG3MqhISTE1NzA3tDA1MzdMszRIXcRq7ZWfl1iSmKfgWJaZk6jgklqcWFSUn5OTmJJfpBCemqTgVpqToxBckpicraCr4JJZnHp4I0wOALOQqlZnAAAA&hl=es-419&mat=CVgOLeHDGpajElcBezTaAYfiq0Tvx7RQO9s4tx8pO-EgXASdjTSOlDyLKpqD_ojTLmkX3kOIjq1BDAsPAr5lYSrGttAAwIqb4AVl8TzL_yz59A0ehEO7jJOmS9QXi09kFco&authuser=0"  
-                                                            target='_blank'
-                                                            rel='noreferrer'
-                                                            aria-label="Contacto del Desarrollador">
-                                                            Jonatan Avila Desarrollo Web
-                                                        </a>
-</footer>
+<footer>
+    <p>
+        Copyright © 2024 Quiltecno Celulares |
+    </p>
+    <a href="https://www.google.com/search?q=Jonatan+Avila+Desarrollador+Web+Full+Stack+-+Dise%C3%B1ador+Web&stick=H4sIAAAAAAAA_-NgU1I1qLA0TTQ2SktOSjFPNktLNDG3MqhISTE1NzA3tDA1MzdMszRIXcRq7ZWfl1iSmKfgWJaZk6jgklqcWFSUn5OTmJJfpBCemqTgVpqToxBckpicraCr4JJZnHp4I0wOALOQqlZnAAAA&hl=es-419&mat=CVgOLeHDGpajElcBezTaAYfiq0Tvx7RQO9s4tx8pO-EgXASdjTSOlDyLKpqD_ojTLmkX3kOIjq1BDAsPAr5lYSrGttAAwIqb4AVl8TzL_yz59A0ehEO7jJOmS9QXi09kFco&authuser=0"  
+       target='_blank'
+       rel='noreferrer'
+       aria-label="Contacto del Desarrollador"
+       >
+       Powered by Jonatan Avila Desarrollo Web
+    </a>
+</footer>     
 
 <style>
     header{
@@ -170,7 +175,10 @@ import CarouselServices from "./CarouselServices/CarouselServices"
             }
         }
         footer{
-            justify-content: center;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            height: 30px;
             font-size: .5rem;
         }
     }
