fixed footer margin

--- a/src/components/Landing.astro
+++ b/src/components/Landing.astro
@@ -180,6 +180,7 @@ import CarouselServices from "./CarouselServices/CarouselServices"
             align-items: center;
             height: 30px;
             font-size: .5rem;
+            padding-bottom: 10px;
         }
     }
 </style>
