--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -111,7 +111,7 @@ const { title } = Astro.props;
 		align-items: center;
         font-size: .7rem;
 		letter-spacing: 3px;
-		padding: 5px;
+		margin-bottom: 10px;
     }
 	
 </style>
