--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -33,6 +33,7 @@ const { title } = Astro.props;
 		<meta name="twitter:card" content="summary_large_image">
 		<meta name="twitter:label1" content="Tiempo de lectura">
 		<meta name="twitter:data1" content="1 minuto">
+		<meta name="google-site-verification" content="RqiNJydshsOJ83FvRUTThr3gQN8HOWO2wQVNWRBtUB0" />
 	</head>
 	<body>
 		<slot />
