Meta description fixed

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -10,7 +10,6 @@ const { title } = Astro.props;
 <html lang="en">
 	<head>
 		<meta charset="UTF-8" />
-		<meta name="description" content="Astro description" />
 		<meta name="viewport" content="width=device-width" />
 		<link rel="icon" type="image/svg+xml" href="/icon.webp" />
 		<meta name="generator" content={Astro.generator} />
@@ -18,14 +17,14 @@ const { title } = Astro.props;
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 		<link href="https://fonts.googleapis.com/css2?family=Big+Shoulders+Text:wght@100..900&display=swap" rel="stylesheet">
 		<title>{title}</title>
-		<meta name="description" content="Tenemos amplio stock de Accesorios para Celulares,Perifericos,Servicio Tenico en Andrés Baranda 1200, B1878 Quilmes,Provincia de Buenos Aires">
+		<meta name="description" content="Tenemos amplio stock de Accesorios para Celulares,Perífericos,Servicio Técnico en Andrés Baranda 1200, B1878 Quilmes,Provincia de Buenos Aires">
 		<link rel="canonical" href="https://quiltecno.com.ar/">
 		<meta property="og:locale" content="es_ES">
 		<meta property="og:type" content="website">
 		<meta property="og:title" content="Quiltecno Celulares 📱 - Celulares, Accesorios y Servicio Técnico en Quilmes">
 		<meta property="og:description" content="Tenemos amplio stock de Accesorios para Celulares,Perifericos,Servicio Tenico en Andrés Baranda 1200, B1878 Quilmes,Provincia de Buenos Aires">
 		<meta property="og:url" content="https://quiltecno.com.ar/">
-		<meta property="og:site_name" content="Quiltecno Celulares 📱">
+		<meta property="og:site_name" content="Quiltecno Celulares 📱 | Quilmes ">
 		<meta property="og:image" content="../../public/Quiltecno-Celulares-y-Accesorios.webp">
 		<meta property="og:image:width" content="600">
 		<meta property="og:image:height" content="600">
